# ml_playground

./: .gitignore  LICENSE  README.md  docker-compose.yml  justfile  main.py  pyproject.toml
.gemini/: poc_ml_skills.md
data/raw/: .gitignore  mnist.parquet.dvc
plans/: mnist.md
src/: download_data.py  model.py  train.py
