[project]
name = "ml-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.66.1",
    "mlflow>=3.8.1",
    "numpy>=2.4.1",
    "polars>=1.37.1",
    "ray[default,train]>=2.53.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
